# llm-agent-dock

./: .env  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONFIG.md  DEVELOPMENT.md  Dockerfile  README.md  TASK.md  docker-bake.hcl  pyproject.toml  pytest.ini
.github/workflows/: base-images.yml  build-base.yml  build-final.yml  build-images.yml  build-publish.yml  final-images.yml  integration-test.yml  publish.yml
base-images/: Dockerfile  docker-bake.hcl
base-images/bases/fedora/: base.yaml
base-images/bases/node/: base.yaml
base-images/scripts/: build-all.sh  build.sh  install_os_packages.sh  packages-apt.txt  packages-dnf.txt  test-all.sh  test.sh
base-images/tests/smoke/: base.bats  common.bash
config/: config.yaml  images-metadata.yaml
config/agent-build/agents/claude/: agent.yaml
config/agent-build/agents/droid/: agent.yaml
doc/: DEVELOPMENT.md  update-processes.md
doc/ai/: TASK.md
doc/ai/plan/: README.md
doc/ai/plan/T001/: README.md
doc/ai/plan/T002/: README.md
doc/ai/plan/subtask_S2_dockerfile/: README.md
doc/ai/plan/subtask_S3_matrix/: README.md
doc/ai/plan/subtask_S4_tests/: README.md
doc/ai/plan/subtask_S5_docs/: README.md
doc/ai/plan/subtask_T002_S1_planning/: README.md
doc/ai/plan/subtask_T002_S4_tests/: README.md
doc/ai/task/: 00-aicage-notes.md  00-aicage-software.md
doc/ai/task/03/: 03-TASK.md
doc/ai/task/05/: 05-TASK.md
doc/ai/task/06/: 06-TASK.md
doc/ai/task/07/: 07-TASK.md
doc/ai/task/08/: 08-TASK.md
doc/ai/task/09/: 09-SUBTASK3-SUMMARY.md  09-SUBTASK4.md
doc/ai/task/10/: 10-TASK.md
doc/ai/task/12/: 12-AICAGE-BUILDER.md  12-TASK.md  SUBTASK-SUMMARY-TEMPLATE.md
doc/ai/tasks/: README.md
doc/ai/tasks/T001_llm-agent-dock-matrix-builder/: README.md
doc/ai/tasks/T002_validate-builds-docker/: README.md
doc/ai/tasks/T003_intensive-startup-tests/: README.md
doc/ai/tasks/T007_github-issues-pilot/: README.md
doc/ai/tasks/T008_workflow-cost-management/: README.md
doc/ai/tasks/T009_kickstart-template/: README.md
doc/ai/tasks/T010_cost-reduction-tooling/: README.md
doc/ai/templates/: subtask_plan_README.template.md  task_plan_README.template.md
doc/ai/workflow/: workflow_cost_audit.md
doc/ideas/: IDEAS.md
doc/validation/: config.schema.json
final-images/: Dockerfile  docker-bake.hcl
final-images/scripts/: build-all.sh  build.sh  entrypoint.sh  test-all.sh  test.sh
final-images/tests/smoke/: cline.bats  codex.bats  common.bash  droid.bats
githooks/: commit-msg
scripts/: build-all.sh  build.sh  check-commit-message.sh  common.sh  lint.sh  test-all.sh  test.sh
scripts/dev/: bootstrap.sh  capture_agent_startup.py
scripts/installers/: install_factory_ai_droid.sh
scripts/util/: count_aicage_tags.sh
src/aicage/: _logging.py  cli.py  cli_parse.py  config_store.py
src/aicage/cli/: entrypoint.py
src/aicage/config/: config.yaml  config_store.py  file_locking.py  global_config.py  project_config.py  runtime_config.py
src/aicage/registry/: _agent_definition.py  _agent_discovery.py  _agent_version_check.py  _custom_agent_loader.py  _local_build.py  _local_query.py  _pull_decision.py  _pull_runner.py  _remote_api.py  _remote_query.py  base_image.py  discovery.py  image_pull.py  image_selection.py
src/aicage/registry/agent_version/: __init__.py  _store.py  checker.py
src/aicage/registry/custom_agent/: __init__.py  _loader.py  _validation.py  loader.py
src/aicage/registry/images_metadata/: loader.py  models.py
src/aicage/registry/local_build/: _runner.py  _store.py  ensure_local_image.py
src/aicage/runtime/: _env_vars.py  prompts.py  run_plan.py
src/aicage/runtime/auth/: mounts.py
src/aicage/runtime/mounts/: _docker_socket.py  _entrypoint.py  _git_config.py  _gpg.py  _ssh_keys.py  resolver.py
tests/: test_cli.py
tests/aicage/: test_discovery.py  test_visibility.py
tests/aicage/cli/: test_cli.py  test_main.py  test_parse.py  test_prompt.py
tests/aicage/config/: test_config_store.py  test_context.py  test_global_config.py  test_project_config.py  test_runtime_config.py
tests/aicage/integration/: _helpers.py  test_builtin_agents.py  test_custom_agent_build.py  test_version_check.py
tests/aicage/registry/: test__agent_discovery.py  test_agent_discovery.py  test_agent_version_check.py  test_image_ops.py  test_image_pull.py  test_image_selection.py  test_init.py  test_local_build.py  test_local_query.py  test_remote_api.py  test_remote_query.py
tests/aicage/registry/agent_version/: test__store.py  test_agent_version_check.py  test_checker.py
tests/aicage/registry/custom_agent/: test__validation.py  test_agent_discovery.py  test_loader.py
tests/aicage/registry/local_build/: _fixtures.py  (+2 more)
tests/aicage/runtime/: test_agent_config.py  test_base_image.py  test_prompts.py  test_run_plan.py
tests/smoke/: cline.bats  codex.bats  common.bash  droid.bats  factory_ai_droid.bats
(+60 files in other folders)
