[build-system]
requires = ["hatchling>=1.18", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aicage"
description = "Runs agentic coding assistants in docker containers"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Stefan Kuhn" }]
dependencies = ["PyYAML", "portalocker"]
dynamic = ["version"]

[project.scripts]
aicage = "aicage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aicage"]
shared-data = { "config/config.yaml" = "config/config.yaml", "config/images-metadata.yaml" = "config/images-metadata.yaml" }

[tool.hatch.build]
include = ["config/config.yaml", "config/images-metadata.yaml"]

[tool.hatch.build.targets.sdist]
include = ["config/config.yaml", "config/images-metadata.yaml"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/aicage/_version.py"

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
  "E", "F",        # correctness
  "I",             # imports
  "UP",            # pyupgrade
  "B",             # bugbear
  "PL",            # pylint rules (incl. protected access)
  "SLF",           # flake8-self (private member access)
]
per-file-ignores = { "tests/**" = ["SLF001"] }
